@@ -2,6 +2,9 @@
 /*
  * Ruby Cairo Binding
  *
+ * $Author: kou $
+ * $Date: 2005-10-10 15:40:26 $
+ *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
  *
